# road-litter-priority-pipeline

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
config/: default_config.yaml  example_config.yaml
docs/: DATA_AND_DOCUMENTATION_LICENSE.md  input_data_schema.md  manuscript_inserts.md  output_data_schema.md  privacy_and_data_access.md  reproducibility.md  workflow.md  zenodo_release_checklist.md
examples/: generate_synthetic_input.py
examples/expected_output/outputs/grid_analysis/: grid_exposure_full.csv  grid_exposure_period1.csv  grid_exposure_period2.csv
examples/expected_output/outputs/litter_analysis/: grid_litter_metrics_full.csv  grid_litter_metrics_period1.csv  grid_litter_metrics_period2.csv  unique_litter_events_full.csv  unique_litter_events_period1.csv  unique_litter_events_period2.csv
examples/expected_output/outputs/processed/: all_points_cleaned.csv
examples/expected_output/tables/: table1_study_data_exposure.csv  table2_validation.csv  table3_stability_priority.csv
examples/synthetic_input/: synthetic_points.csv  synthetic_validation.csv
scripts/: make_main_figures.py  make_main_tables.py  run_pipeline.py
src/: 01_inventory.py  02_validation.py  03_exposure.py  04_deduplication.py  05_indicators.py  06_stability_priority.py  utils.py
supplementary/: algorithm_1_pseudocode.md  script_architecture_table.csv
tests/: conftest.py  test_deduplication.py  test_exposure.py  test_indicators.py
(+4 files in other folders)
